Added first section with styles to the webpage

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,106 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+ul, h1, p{
+    margin: 0;
+    padding: 0;
+}
+
+.container{
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid black; */
+}
+
+.sec-1{
+    display: flex;
+    flex-direction: column;
+    /* border: 10px solid yellow; */
+    background-color: #1F2937;
+    padding: 5px 80px 70px;
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+    /* flex: 1; */
+    /* align-items: center; */
+    /* border: 1px solid black; */
+}
+
+.nav-items{
+    display: flex;
+    list-style-type: none;
+    gap: 20px;
+    /* border: 0; */
+    /* padding: 0; */
+    /* border: 1px solid black; */
+}
+
+.sub-1{
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    /* border: 1px solid black; */
+    padding-top: 30px;
+    gap: 30px;
+}
+
+.sub-1 div{
+    flex:1;
+}
+
+.left-1{
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid black; */
+    /* justify-content: space-around; */
+    align-items: flex-start;
+
+}
+
+button{
+    width: 100px;
+    height: 30px;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    margin-top: 10px;
+    /* text-align: center; */
+    /* text-decoration: none; */
+    /* display: inline-block; */
+    border-radius: 6px;
+}
+
+.hero.main{
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+}
+
+.hero.sec, .nav-bar{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.logo{
+    font-size: 24px;
+    color: #F9FAF8;
+    margin: 0;
+    padding: 0;
+    /* border: 1px solid black; */
+}
+
+
+.placeholder{
+    display: flex;
+    /* flex-direction: column; */
+    background-color: #9da7b4;
+    align-self: stretch;
+    color: #F9FAF8;
+    justify-content: center;
+}
+
+.placeholder p{
+    align-self: center;
+}
