--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,8 @@
 *{
-    border: 0;
+    margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family:Roboto, sans-serif;
-}
-
-ul, h1, p, h2{
-    margin: 0;
-    padding: 0;
-}
-
-.container{
-    display: flex;
-    flex-direction: column;
-    /* border: 1px solid black; */
-}
-
-.sec-1{
-    display: flex;
-    flex-direction: column;
-    /* border: 10px solid yellow; */
-    background-color: #1F2937;
-    padding: 5px 80px 70px;
-}
-
-.nav-bar{
-    display: flex;
-    justify-content: space-between;
-    /* flex: 1; */
-    /* align-items: center; */
-    /* border: 1px solid black; */
-}
-
-.nav-items{
-    display: flex;
-    list-style-type: none;
-    gap: 20px;
-    /* border: 0; */
-    /* padding: 0; */
-    /* border: 1px solid black; */
-}
-
-.sub-1{
-    display: flex;
-    /* justify-content: center; */
-    align-items: center;
-    /* border: 1px solid black; */
-    padding-top: 30px;
-    gap: 30px;
-}
-
-.sub-1 div{
-    flex:1;
-}
-
-.left-1{
-    display: flex;
-    flex-direction: column;
-    /* border: 1px solid black; */
-    /* justify-content: space-around; */
-    align-items: flex-start;
-
 }
 
 button{
@@ -69,10 +11,52 @@ button{
     background-color: #3882F6;
     color: #F9FAF8;
     margin-top: 10px;
-    /* text-align: center; */
-    /* text-decoration: none; */
-    /* display: inline-block; */
     border-radius: 6px;
+}
+
+/* setting main container of the webpage to flex */
+.container{
+    display: flex;
+    flex-direction: column;
+}
+
+/* First part of the page */
+.sec-1{
+    display: flex;
+    flex-direction: column;
+    background-color: #1F2937;
+    padding: 0 100px;
+}
+
+.nav-bar{
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.nav-items{
+    display: flex;
+    list-style-type: none;
+    gap: 40px;
+
+}
+
+.sub-1{
+    display: flex;
+    align-items: center;
+    padding: 100px 0;
+    gap: 30px;
+}
+
+.sub-1 div{
+    flex:1;
+}
+
+.hero{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
 }
 
 .hero.main{
@@ -91,13 +75,11 @@ button{
     color: #F9FAF8;
     margin: 0;
     padding: 0;
-    /* border: 1px solid black; */
 }
 
 
 .placeholder{
     display: flex;
-    /* flex-direction: column; */
     background-color: #9da7b4;
     align-self: stretch;
     color: #F9FAF8;
@@ -108,36 +90,26 @@ button{
     align-self: center;
 }
 
-img{
-    border: 3px solid blue;
-    height: 150px;
-    width: 150px;
-    border-radius: 10px;
-}
 
+
+/* Second part of the page */
 .sec-2{
     display: flex;
     flex-direction: column;
-    /* border: 1px solid green; */
-    padding: 5px 20px 70px;
+
+    padding: 0 100px;
     align-items: center;
 }
 
 .cards{
     flex: 1;
     display: flex;
-    /* gap: 30px; */
-    /* padding: 20px; */
     flex-wrap: wrap;
 }
 
 .card{
-    /* border: 1px solid red; */
     flex: 1;
     padding: 30px;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* flex-wrap: wrap; */
     max-width:min-content;
 }
 
@@ -147,52 +119,58 @@ img{
     font-weight: 900;
 }
 
+img{
+    border: 3px solid blue;
+    height: 150px;
+    width: 150px;
+    border-radius: 10px;
+}
+
+/* Third part of the page */
 .quote{
     background-color: #E5E7EB;
     display: flex;
     flex-direction: column;
-    padding: 70px 70px 0px 70px;
-    /* border: 1px solid red; */
+    padding: 70px 100px 0;
+    align-items: flex-end;
 }
 
 .quote.text{
     font-size:36px;
-    font-style: oblique;
+    font-style: italic;
     color: #1F2937;
 }
 
 .quote.author{
-    align-self:flex-end;
-    padding: 0 0 70px;
+    padding: 20px 100px 100px;
     font-weight: bold;
 }
 
+/* Fourth part of the page */
 .call-to-action{
     background-color: #3882F6;
-    /* margin: 30px; */
-    margin: 70px;
+    margin: 100px;
     display: flex;
-    /* justify-content: flex-end; */
     align-items: center;
     border-radius: 6px;
-    /* border: 1px solid red; */
     padding: 30px;
 }
 
-.sub-action{
+.action-text{
     flex:1;
     font-size: 14px;
     color: #E5E7EB;
 }
 
-.sub-action h2{
+.action-text h2{
     font-weight: 900;
 }
 
-.action{
+.action-signup{
     border: 1px solid white;
 }
 
+/* Footer part of the page */
 .footer{
     display: flex;
     justify-content: center;
